--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "axios": "^1.6.8",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
