--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "network-error-handling-testttttt",
+  "name": "network-error-handling",
   "version": "1.1.3",
   "description": "An useful error handler for axios network requests in a React application",
   "license": "MIT",
